project almust complet

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 230px;
 }
 
 .nav-title {
@@ -50,4 +51,192 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+
+/* hearderr related styles */
+
+.headerr {
+    background: #FFF8F3;
+    width: 1600px;
+    height: 837px;
+    flex-shrink: 0;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+
+}
+
+.banner .profile-pic {
+    width: 500px;
+    height: 615px;
+    flex-shrink: 0;
+
+}
+
+.banner-into {
+    color: #474747;
+    font-size: 45px;
+
+}
+
+.banner-title {
+    color: #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+
+}
+
+#paraga {
+    text-align: center;
+}
+
+/* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0px auto;
+}
+
+main section {
+    margin-top: 130px;
+}
+
+/* about section styless */
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* .about-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700; */
+
+}
+
+.about-describetion {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
+}
+
+/* .into-title{
+    text-align: center;
+}
+.info-describetion{
+    color:  #474747;
+ 
+font-size: 20px;
+ 
+font-weight: 700;
+line-height: 30px;
+} */
+
+
+
+/* what i do section start */
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+
+#what-i-do {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+
+}
+
+/* skils related styles */
+.skils-container {
+    display: flex;
+    margin-top: 70px;
+}
+
+.skils {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    gap: 24px;
+
+}
+
+.skils-describetion {
+    color: #757575;
+    font-size: 16px;
+}
+
+/* resume section styless */
+
+.resume-colum-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title{
+    color: #474747;
+ 
+font-size: 25px;
+ 
+font-weight: 700;
+ 
+}
+.resuem-item-institute{
+    color:  #757575;
+ 
+font-size: 20px;
+ 
+font-weight: 600;
+ 
+}
+.resume-item-describetion{
+    color:  #757575;
+font-size: 16px;
+font-weight: 400;
+}
+.button{
+    border-radius: 5px;
+background: #FD6E0A;
+width: 200px;
+height: 64px;
+flex-shrink: 0;
+color:  #FFF;
+text-align: center;
+ 
+font-size: 20px;
+ 
+ 
+}
+.resume-button{
+    text-align: center;
+    margin-top: 50px;
 }
